--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
             </svg>
         </div>
         <button id="splash-start-btn" class="btn btn-primary font-bold py-3 px-8 text-lg">Start</button>
+        <p class="absolute bottom-6 text-sm text-[var(--text-secondary)] opacity-50">1.0</p>
     </div>
 
     <div id="background-animation-container"></div>
@@ -228,6 +229,11 @@
                     <div id="calendar-grid" class="grid grid-cols-7 gap-2 text-center max-w-md mx-auto"></div>
                 </div>
 
+                <div class="flex justify-center gap-4 mb-8">
+                     <button id="turn-in-hours-btn" class="btn btn-primary font-bold py-3 px-8 text-lg">Turn In Hours</button>
+                     <button id="view-stats-btn" class="btn btn-secondary font-bold py-3 px-8 text-lg">View Stats</button>
+                </div>
+
                 <div class="card p-6">
                     <h3 class="text-lg font-semibold mb-4">Summary</h3>
                     <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 text-center">
@@ -244,10 +250,6 @@
                             <p id="summary-total" class="text-2xl font-bold">0.00h</p>
                         </div>
                     </div>
-                </div>
-                <div class="flex justify-center gap-4">
-                     <button id="turn-in-hours-btn" class="btn btn-primary font-bold py-3 px-8 text-lg">Turn In Hours</button>
-                     <button id="view-stats-btn" class="btn btn-secondary font-bold py-3 px-8 text-lg">View Stats</button>
                 </div>
             </main>
         </div>
