--- a/index.html
+++ b/index.html
@@ -201,12 +201,6 @@
 
     <div class="min-h-screen p-4 sm:p-6 lg:p-8">
         <div class="max-w-5xl mx-auto">
-            
-            <header class="flex justify-end items-center mb-8">
-                <button id="settings-btn" class="p-3 rounded-full hover:bg-black/10 transition-colors">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
-                </button>
-            </header>
 
             <div class="flex justify-center items-center gap-4 sm:gap-8 mb-8">
                 <button id="clock-in-btn" class="btn btn-primary flex-1 max-w-xs py-4 px-6 text-xl font-bold shadow-lg flex items-center justify-center gap-3">
@@ -229,11 +223,6 @@
                     <div id="calendar-grid" class="grid grid-cols-7 gap-2 text-center max-w-md mx-auto"></div>
                 </div>
 
-                <div class="flex justify-center gap-4 mb-8">
-                     <button id="turn-in-hours-btn" class="btn btn-primary font-bold py-3 px-8 text-lg">Turn In Hours</button>
-                     <button id="view-stats-btn" class="btn btn-secondary font-bold py-3 px-8 text-lg">View Stats</button>
-                </div>
-
                 <div class="card p-6">
                     <h3 class="text-lg font-semibold mb-4">Summary</h3>
                     <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 text-center">
@@ -250,6 +239,12 @@
                             <p id="summary-total" class="text-2xl font-bold">0.00h</p>
                         </div>
                     </div>
+                </div>
+
+                <div class="flex justify-center flex-wrap gap-4">
+                     <button id="turn-in-hours-btn" class="btn btn-primary font-bold py-3 px-8 text-lg">Turn In Hours</button>
+                     <button id="view-stats-btn" class="btn btn-secondary font-bold py-3 px-8 text-lg">View Stats</button>
+                     <button id="settings-btn" class="btn btn-secondary font-bold py-3 px-8 text-lg">Settings</button>
                 </div>
             </main>
         </div>
